# OCR

./: .gitignore  README.md  myOCR.py  pyproject.toml
